<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#00FFFFFF"
    tools:context=".fragments.NfcScanFragment">


    <TextView
        android:id="@+id/txt_hint"
        android:layout_width="0dp"
        android:layout_marginVertical="@dimen/_64sdp"
        android:layout_marginHorizontal="@dimen/_16sdp"
        android:gravity="center"
        android:textSize="@dimen/_16ssp"
        android:text="@string/welcome_to_nfc_qr_service"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_height="wrap_content"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/nfc_scan"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_16sdp"
        android:layout_marginVertical="@dimen/_64sdp"
        android:text="@string/scan_nfc"
        android:textColor="@color/white"
        android:textSize="@dimen/_13ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_hint" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/custom_scan"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/scan"
        android:textColor="@color/white"
        android:textSize="@dimen/_13ssp"
        android:layout_marginHorizontal="@dimen/_16sdp"
        android:layout_marginVertical="@dimen/_8sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nfc_scan" />

</androidx.constraintlayout.widget.ConstraintLayout>