<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout_root"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_layout_border_r16_white_top_curve"
    android:paddingBottom="@dimen/_16sdp"
    app:behavior_hideable="false"
    app:behavior_peekHeight="300dp"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">



    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_request"
        style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:backgroundTint="@color/colorWhite"
        android:letterSpacing="0"
        android:layout_marginTop="@dimen/_16sdp"
        android:text="@string/tap_to_scan"
        android:textAllCaps="false"
        android:textColor="@color/scan_normal"
        android:textSize="@dimen/_8ssp"
        app:icon="@drawable/ic_dbc_add_card"
        app:iconGravity="textTop"
        app:iconPadding="8dp"
        app:iconSize="64dp"
        app:iconTintMode="multiply"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:rippleColor="@color/scan_normal"
        app:strokeWidth="0dp" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="12dp"
        android:background="?attr/selectableItemBackground"
        app:layout_constraintBottom_toBottomOf="@id/btn_request"
        app:layout_constraintEnd_toStartOf="@id/btn_request"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/img_add"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_margin="4dp"
            android:contentDescription="@string/content_description"
            android:elevation="2dp"
            android:outlineSpotShadowColor="@color/scan_normal"
            android:padding="4dp"
            android:src="@drawable/ic_flashlight_off_fill"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/scan_normal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:text="@string/flash"
            android:textAlignment="center"
            android:textColor="@color/scan_normal"
            android:textSize="@dimen/_8ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/img_add" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_history"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:background="?attr/selectableItemBackground"
        app:layout_constraintBottom_toBottomOf="@id/btn_request"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn_request">

        <ImageView
            android:id="@+id/img_history"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_margin="4dp"
            android:contentDescription="@string/content_description"
            android:elevation="2dp"
            android:outlineSpotShadowColor="@color/scan_normal"
            android:padding="4dp"
            android:src="@drawable/ic_img_for_scan"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/scan_normal" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:text="@string/image"
            android:textAlignment="center"
            android:textColor="@color/scan_normal"
            android:textSize="@dimen/_8ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/img_history" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
